--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="custom-h1">Meet new and interesting dogs nearby.</h1>
-          <button class="btn btn-dark btn-lg" type="button"><i class="fab fa-apple"></i> Download</button>
-          <button class="btn btn-outline-light btn-lg" type="button"><i class="fab fa-google-play"></i> Download</button>
+          <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
+          <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
           <img src="images/iphone6.png" alt="iphone-mockup">
