--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="custom-h3">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
 
   </section>
 
@@ -197,7 +197,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="icon-footer fab fa-twitter"></i>
+    <i class="icon-footer fab fa-facebook"></i>
+    <i class="icon-footer fab fa-instagram"></i>
+    <i class="icon-footer far fa-envelope"></i>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
